--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "name": "application-name"
   , "version": "0.0.1"
   , "private": true
+  ,  "engines": {
+      "node": "0.6.13",
+      "npm":  "1.1.9"
+    }
   , "dependencies": {
       "express": "2.5.8"
-    , "jade": ">= 0.0.1"
     , "request": ""
   }
 }
